	  readline.  This currently works only for built-in functions.
	  Contributed by Nghia Ho (2015-07-28).
	* apps/system/readline and apps/nshlib:  Extended the tab-completion
	  support to also expand NSH command names (2015-07-30).
	* apps/system/readline and apps/nshlib:  Add support for an in-memory
	  command line history that can be retrieved using the up and down
	  arrows.  Contributed by Nghia Ho (2015-08-09).
	* apps/Makefile:  No longer depends on hardcoded lists of directories.
	  Instead, it does a wildcard search to find all appropriate
	  directories.  This means that to install a new application, you
	  simply have to copy the directory (or link it) into the apps/
	  directory.  If the new directory includes a Makefile and Make.defs
	  file, then it will automatically be included in the build (2015-08-11).
	* apps/Makefile, Kconfig, */Kconfig, tools/mkkconfig.sh: Add the tool
	  mkkconfig.sh that dynamically builds the apps/Kconfig file at
	  configuration time.  The hardcoded configuration file has been removed
	  and now the top-level Makefile executes tools/mkkconfig.sh to auto-
	  generate the top-level Kconfig file.  A new apps/ make target call
	  preconfig: was added to support this operation.  Now you do not have
	  to modify the top-level Kconfig file to add a new directory into the
	  configuration; the top-level subdirectory simply needs to include a
	  Kconfig file and it will automatically be included in the
	  configuration.  The native Windows build is temporarily broken until
	  a new apps/tools/mkconfig.bat script is generated (2015-08-11).
	* apps/tools/mkkconfig.bat:  Add the Windows script corresponding to
	  apps/tools/mkkconfig.sh.  Needed for a Windows native build.  Untested
	  on initial commit (2015-08-12).

7.12 2015-xx-xx Gregory Nutt <gnutt@nuttx.org>

	* apps/examples/can:  Extend the CAN loopback test by adding more
	  command line options (2015-08-17).
