@@ -37,6 +37,11 @@
 include $(APPDIR)/Make.defs
 
 # USB serial device example
+# Built-in application info
+
+APPNAME = usbserial
+PRIORITY = SCHED_PRIORITY_DEFAULT
+STACKSIZE = 2048
 
 ASRCS =
 CSRCS =
@@ -104,7 +109,14 @@ install:
 
 endif
 
+ifeq ($(CONFIG_NSH_BUILTIN_APPS),y)
+$(BUILTIN_REGISTRY)$(DELIM)$(APPNAME)_main.bdat: $(DEPCONFIG) Makefile
+	$(call REGISTER,$(APPNAME),$(PRIORITY),$(STACKSIZE),$(APPNAME)_main)
+
+context: $(BUILTIN_REGISTRY)$(DELIM)$(APPNAME)_main.bdat
+else
 context:
+endif
 
 .depend: Makefile $(SRCS)
 	@$(MKDEP) $(ROOTDEPPATH) "$(CC)" -- $(CFLAGS) -- $(SRCS) >Make.dep
